ms-clients/config-kubernetes/deployment-tfinal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-tf
  namespace: products-tfinal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-app
  template:
    metadata:
      labels:
        app: products-app
    spec:
      containers:
      - name: products-app
        image: malowalo/ms-products-opt:v2
        args:
          - "-text=Bienvenido a la app Products - Proyecto final"  # Mensaje para la aplicación del proyecto
        ports:
          - containerPort: 9095
