ms-clients/config-kubernetes/service-tfinal.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tfinal
  namespace: products-tfinal
spec:
  selector:
    app: products-app
  ports:
    - protocol: TCP
      port: 80  # Puerto del Service accesible para otros componentes del clúster.
      targetPort: 9095 # Puerto en el contenedor donde corre la aplicación
  type: ClusterIP
