ms-clients/config-kubernetes/ingress-tfinal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tfinal
  namespace: products-tfinal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Especifica la clase de Ingress
  rules:
  - host: "app.productos.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-tfinal
            port:
              number: 80
